2007-12-26  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* src/core/Makefile.am,
	configure.ac: Add -version-info to libtool.

2007-12-23  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* po/zh_CN.po: Fix a translation mistake.

2007-12-23  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* configure.ac: Polish for better usage and release 0.3.6.1

	* pcmanx.desktop.in: Add more description.

	* plugin/src/Makefile.am: Fix the problem of Mozilla/Firefox plugin.

	* po/zh_CN.po,
	po/zh_TW.po,
	src/mainframe.cpp: Add bug report link to about dialog, and polish
	sitelist update mechanism.

2007-08-29  Shih-yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* pcmanx-gtk2.spec.in: Modify the packager info.

	* configure.ac, autogen.sh: Use automake 1.10.

2007-07-30  PCMan (Hong Jen Yee)  <pcman.tw@gmail.com>

	* src/core/termview.cpp (CTermView::DrawSpaceFillingChar),
	src/core/termview.h: Fix bug in rendering ASCII characters.
	
	* configure.ac: Bump version number to 0.3.6 .

2007-07-28  Jim Huang  <jserv@openmoko.org>

	* src/pcmanx_gtk2.cpp (main): Disable glib's own malloc/free wrapper
	while --enable-debug.
	glib introduces its own memory management mechanism, which confuses
	memory debuggers such as valgrind and disable their own wrapper
	against the applications.

	* plugin/src/plugin.cpp,
	plugin/src/plugin.h: Remove <X11/Intrinsic.h> and <X11/cursorfont.h>
	because recently xlib package has changed the headers.

	* configure.ac: Added c3|c3_2|x86_64 to MMX supported arch.
	Added warning to libnotify when popup notifier support is not enabled.

2007-07-27  Kanru Chen  <koster@debian.org.tw>

	* src/core/termview.cpp:
	Draw characters that are not handled in CTermView::DrawSpaceFillingChar.

2007-07-26  PCMan (Hong Jen Yee)  <pcman.tw@gmail.com>

	* src/core/termview.cpp:
	Fix bugs in CTermView::DrawSpaceFillingChar and use some workarounds to
	overcome the serious bugs in gtk+ itself.
